--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Testing 1,2,3...
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Chris Forster</title>
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+
+  <body class="homepage">
+    <main>
+      <h1>Chris Forster</h1>
+
+      <p>I am associate professor in the Department of English at Syracuse University. My research focuses on censorship and obscenity, modernist literature, and the history of media. If the first pair those terms are of interest to you, you may be interested in <cite class="book"><a href="https://global.oup.com/academic/product/filthy-material-9780190840877?cc=us&lang=en&">Filthy Material: Modernism and the Media of Obscenity</a></cite> (Oxford UP, 2018). If the latter pair, you might be interested in <cite class="book"><a href="https://www.bloomsbury.com/us/modernism-and-its-media-9781350033153/">Modernism and Its Media</a></cite> (Bloomsbury, 2020).</p>
+    </main>
+
+    <div class="row">
+
+      <article class="column">
+	<h3>Contact</h3>
+	<ul>
+	  <li><a href="http://twitter.com/cforster" class="fa fa-twitter"> @cforster</a></li>
+	  <li class="email">cforster@syr.edu</li>
+	</ul>
+      </article>
+
+      <article class="column">
+	<h3 class="title">Recent Blog Posts</h3>
+
+	<ul>
+	  
+	  <li><a href="2022/04/on-words">On Words<a/> Apr 22, 2022</li>
+	  
+	  <li><a href="2016/10/short-pollen-post">About 2100 Words About Pollen<a/> Oct 19, 2016</li>
+	  
+	  <li><a href="2016/09/on-pollen">On Pollen<a/> Sep 01, 2016</li>
+	  
+	  <li><a href="2016/03/poetry-in-html">Poetry in HTML<a/> Mar 20, 2016</li>
+	  
+	  <li><a href="2015/09/banned-books">Two Cheers for Banned Books Week<a/> Sep 30, 2015</li>
+	  
+	</ul>
+      </article>
+    </div>
+  </body>
+
+</html>
