--- a/archive.html
+++ b/archive.html
@@ -17,25 +17,11 @@
 
       <ul>
 	
-	<li><a href="2022/04/on-words">On Words<a/> Apr 22, 2022</li>
-	
-	<li><a href="2016/10/short-pollen-post">About 2100 Words About Pollen<a/> Oct 19, 2016</li>
-	
-	<li><a href="2016/09/on-pollen">On Pollen<a/> Sep 01, 2016</li>
-	
-	<li><a href="2016/03/poetry-in-html">Poetry in HTML<a/> Mar 20, 2016</li>
+	<li><a href="2022/07/on-words">Are Large Language Models Operationalizations of Saussurean Structure?<a/> Jul 18, 2022</li>
 	
 	<li><a href="2015/09/banned-books">Two Cheers for Banned Books Week<a/> Sep 30, 2015</li>
 	
-	<li><a href="2015/09/gender-in-hathitrust-dataset">A Walk Through the Metadata: Gender in the HathiTrust Dataset<a/> Sep 08, 2015</li>
-	
-	<li><a href="2015/08/exploring-hathitrust-dataset">Looking at a Dataset for Distant Reading: Some Anticlimaxes<a/> Aug 10, 2015</li>
-	
 	<li><a href="2015/06/markdown-skepticism">About 1400 Words of Skepticism about Markdown, and an Imagined Alternative<a/> Jun 29, 2015</li>
-	
-	<li><a href="2014/12/santa">About 300 Words, Reminding You About Santa Claus’s Size<a/> Dec 22, 2014</li>
-	
-	<li><a href="2014/12/interstellar">1567 Words on <em>Interstellar</em> and Dylan Thomas<a/> Dec 03, 2014</li>
 	
 	<li><a href="2014/09/podcast-as-a-genre">The Podcast as a Genre<a/> Sep 12, 2014</li>
 	
@@ -54,8 +40,6 @@
 	<li><a href="2013/06/you-cant-eat-the-food-porn">“you can’t eat the food porn”: The Obscene, the Pornographic, the Excessive, the Purposeless<a/> Jun 11, 2013</li>
 	
 	<li><a href="2013/02/returning-to-tfidf">(de)Bugging Ramsay—A Last Stab at tfidf and “The Waves”<a/> Feb 26, 2013</li>
-	
-	<li><a href="2013/02/jekyll-and-coins">Jekyll and COinS,<a/> Feb 15, 2013</li>
 	
 	<li><a href="2013/02/reading-the-waves-with-stephen-ramsay">With Thanks to Woolf and emacs, Reading ‘The Waves’ with Stephen Ramsay<a/> Feb 13, 2013</li>
 	
