--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
 	<ul>
 	  
-	  <li><a href="2022/04/on-words">On Words<a/> Apr 22, 2022</li>
-	  
-	  <li><a href="2016/10/short-pollen-post">About 2100 Words About Pollen<a/> Oct 19, 2016</li>
-	  
-	  <li><a href="2016/09/on-pollen">On Pollen<a/> Sep 01, 2016</li>
-	  
-	  <li><a href="2016/03/poetry-in-html">Poetry in HTML<a/> Mar 20, 2016</li>
+	  <li><a href="2022/07/on-words">Are Large Language Models Operationalizations of Saussurean Structure?<a/> Jul 18, 2022</li>
 	  
 	  <li><a href="2015/09/banned-books">Two Cheers for Banned Books Week<a/> Sep 30, 2015</li>
+	  
+	  <li><a href="2015/06/markdown-skepticism">About 1400 Words of Skepticism about Markdown, and an Imagined Alternative<a/> Jun 29, 2015</li>
+	  
+	  <li><a href="2014/09/podcast-as-a-genre">The Podcast as a Genre<a/> Sep 12, 2014</li>
+	  
+	  <li><a href="2013/10/spring-new-hampshire">From New Hampshire to Harlem, by Way of London<a/> Oct 10, 2013</li>
 	  
 	</ul>
       </article>
